# named_param

./: CMakeLists.txt  CMakeLists.txt.tpl  INSTALL.md  LICENSE.md  README.md
.nxxm/: deps
examples/: CMakeLists.txt  callback.cpp  simple_named_parameter.cpp
pre/named_param/: make_param.hpp
